<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#099BD5"
    tools:context=".MainActivity" >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Ваши текущие элементы UI -->

            <TextView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:fontFamily="@font/anton"
                android:text="@string/logo"
                android:textAlignment="center"
                android:textColor="#FFFEFE"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginHorizontal="50sp"
                android:layout_marginTop="100sp"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:hint="@string/hint_user_field"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/main_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_field"
                android:layout_marginHorizontal="130sp"
                android:layout_marginTop="20sp"
                android:backgroundTint="@color/design_default_color_primary_dark"
                android:text="@string/main_btn" />

            <TextView
                android:id="@+id/result_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_btn"
                android:layout_marginTop="50sp"
                android:fontFamily="@font/anton"
                android:textAlignment="center"
                android:textColor="#FFFEFE"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_field"
                android:layout_marginHorizontal="130sp"
                android:layout_marginTop="10sp"
                android:backgroundTint="@color/design_default_color_primary_dark"
                android:text="@string/btn1" />

            <TextView
                android:id="@+id/logo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn1"
                android:fontFamily="@font/anton"
                android:text="@string/logo2"
                android:textAlignment="center"
                android:textColor="#FFFEFE"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="43dp"
                android:fontFamily="@font/anton"
                android:text="Жел жылдамдығы"
                android:textAlignment="center"
                android:textColor="#FFFEFE"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_2" />

            <TextView
                android:id="@+id/TextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/anton"
                android:text="Ылғалдылық"
                android:textAlignment="center"
                android:textColor="#FFFEFE"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_2" />

            <TextView
                android:id="@+id/TextView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/anton"
                android:text="Қысым"
                android:textAlignment="center"
                android:textColor="#FFFEFE"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_2" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>